"Updated auth/login/route.js to include username in JWT token, modified notes/route.js to return user data, and made various changes to page.js and login/page.js including adding a Suspense component, updating CSS classes, and modifying the navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@ body {
   line-height: 1.5;
 }
 
+.container {
+  max-width: 400px !important;
+}
+
 button {
   border: none;
   padding: 8px 16px;
@@ -26,7 +30,7 @@ button {
 
 button:hover {
   background-color: #0b5ed7;
-  font-size: x-small !important;
+  /* font-size: x-small !important; */
   font-weight: bold !important;
 }
 
@@ -45,10 +49,42 @@ input {
   padding: 15px !important;
 }
 
+input:focus {
+  outline: none !important;
+  border: none !important;
+}
+
 input::placeholder {
   color: #f1f1f1 !important;
   opacity: 0.5 !important;
   /* Firefox */
+}
+
+textarea {
+  background-color: #373737 !important;
+  color: #f1f1f1 !important;
+  border: none !important;
+  padding: 15px !important;
+  resize: none !important;
+}
+
+textarea:focus {
+  outline: none !important;
+  border: none !important;
+}
+
+textarea::placeholder {
+  color: #f1f1f1 !important;
+  opacity: 0.5 !important;
+  /* Firefox */
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.z-index {
+  z-index: 2 !important;
 }
 
 /* label {
