--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@ button {
   padding: 8px 16px;
   border-radius: 5px !important;
   background-color: #0d6efd;
-  font-weight: bold;
+  font-weight: bold !important;
   color: #f1f1f1;
   cursor: pointer;
   transition: background-color 0.25s ease-in-out;
@@ -107,7 +107,15 @@ textarea::placeholder {
   height: 100px !important;
 }
 
-/* label {
-  color: #fff !important;
-  background-color: #373737 !important;
-} */
+.underline {
+  text-decoration: underline #7e7e7e 1px;
+}
+
+.error {
+  color: #f13232;
+}
+
+.suspense {
+  height: 100vh;
+  font-size: large;
+}
